# RubikRecognition

./: CMakeLists.txt  README.md
src/: ImageProcess.cpp  ImageProcess.h  OneSideProcess.cpp  OneSideProcess.h  data.h  func.cpp  func.h  main.cpp  main.h
